k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pokemon-manager
  labels:
    app: pokemon-manager
    version: 1.0.0
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pokemon-manager
  template:
    metadata:
      labels:
        app: pokemon-manager
    spec:
      containers:
      - name: pokemon-manager
        image: corvimae/pokemon-manager-2:latest
        ports:
        - containerPort: 80
