k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pokemon-manager-service
spec:
  selector:
    app: pokemon-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
