k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pokemon-manager-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - pokemon.maybreak.com
    secretName: pokemon-manager-tls
  rules:
  - host: pokemon.maybreak.com
    http:
      paths:
      - backend:
          serviceName: pokemon-manager-service
          servicePort: 80
      - path: /pokemon
        backend:
          serviceName: pokemon-manager-viewer-service
          servicePort: 3000
      - path: /pokemon/new
        backend:
          serviceName: pokemon-manager-service
          servicePort: 80
      - path: /_next
        backend:
          serviceName: pokemon-manager-viewer-service
          servicePort: 3000
